<resources>
    <string name="app_name">You衣柜</string>
    <string name="login">登录</string>
    <string name="register">注册账号</string>
    <string name="forget">忘记密码</string>
    <string name="home_name">首页</string>
    <string name="recommend_name">推荐</string>
    <string name="wardrobe_name">衣柜</string>
    <string name="my_wardrobe_name">我的衣柜</string>
    <string name="me_name">我的</string>
    <string name="vip_mon">月卡</string>
    <string name="vip_ji">季卡</string>
    <string name="vip_year">年卡</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>


    <string name="recommed_title">单品推荐</string>
    <string name="recommed_more">更多推荐</string>

    <string name="app_test_long">长文本测试—长文本测试—长文本测试—长文本测试—长文本测试—长文本测试—长文本测试—长文本测试—</string>
    <string name="commend_describe">·搭配师每天为您精心搭配，左滑喜欢，右滑删除·</string>
    <string name="app_test_short">定位中..</string>


    <string name="register_title">注册</string>


    <string name="tip_user_name_null">请输入用户名！</string>
    <string name="tip_psw_null">请输入密码！</string>
    <string name="tip_net_error">请检查网络！</string>
    <string name="tip_phone_error">请输入正确手机号！</string>






    <!--个人信息 列表的title-->
    <!--CardType=证件类型& CardNo=证件编码& Sex=性别& Birthday=生日&Size=尺码&
    Height=身高& Weight=体重& Bust=胸围& Waistline=腰围& Hipline=臀围& ShoulderWidth=肩宽-->
    <string name="user_info_photo">头像</string>
    <string name="user_info_phone">手机号码</string>
    <string name="user_info_card_type">证件类型</string>
    <string name="user_info_card_no">证件编码</string>
    <string name="user_info_sex">性别</string>
    <string name="user_info_birthday">生日</string>

    <string name="user_info_figure">身材信息</string>
    <string name="user_get_adress">收货地址</string>
    <string name="user_back_adress">寄回地址</string>
    <string name="user_info_size">尺码</string>
    <string name="user_short_size">上身</string>
    <string name="user_trousers_size">下身</string>
    <string name="user_info_height">身高</string>
    <string name="user_info_weight">体重</string>
    <string name="user_info_bust">胸围</string>
    <string name="user_info_waistline">腰围</string>
    <string name="user_info_hipline">臀围</string>
    <string name="user_info_shoulderwidth">肩宽</string>

    <string name="user_message_title">个人信息</string>
    <string name="user_dress_history_title">穿衣记录</string>
    <string name="user_user_style_title">风格选择</string>
    <string name="clear_dress_history_title">清空</string>
    <string name="dialog_photo_carema">拍照</string>
    <string name="dialog_photo_album">从手机相册选择</string>

    <!-- 加载状态相关 -->
    <string name="view_empty">您还没有穿衣服~</string>
    <string name="view_network_error">网络异常~</string>
    <string name="view_no_network">网络走丢了~</string>

    <string name="loading">加载中</string>
    <string name="load_success">加载成功</string>
    <string name="load_fail">加载失败</string>

</resources>
