<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/top_title_layout_2" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/color_underline" />
            <LinearLayout
                android:id="@+id/item_photo"
                style="@style/My_Item_container"
                android:layout_height="70dp">

                <TextView
                    style="@style/My_Item_Text"
                    android:text="@string/user_info_photo" />


                <ImageView
                    android:id="@+id/iv_user_photo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/ic_launcher" />

                <include layout="@layout/view_enter_arrow" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/color_underline" />

            <LinearLayout
                android:id="@+id/item_phone"
                style="@style/My_Item_container">

                <TextView
                    style="@style/My_Item_Text"
                    android:layout_weight="0"
                    android:text="@string/user_info_phone" />

                <TextView
                    android:id="@+id/tv_phone"
                    style="@style/My_Item_Text_tip"
                    android:text=" " />

                <include layout="@layout/view_enter_arrow" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_underline" />

            <LinearLayout
                android:id="@+id/item_card_type"
                style="@style/My_Item_container">

                <TextView
                    style="@style/My_Item_Text"
                    android:layout_weight="0"
                    android:text="@string/user_info_card_type" />

                <TextView
                    style="@style/My_Item_Text_tip"
                    android:text=" " />

                <include layout="@layout/view_enter_arrow" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_underline" />

            <LinearLayout
                android:id="@+id/item_card_no"
                style="@style/My_Item_container">

                <TextView
                    style="@style/My_Item_Text"
                    android:layout_weight="0"
                    android:text="@string/user_info_card_no" />

                <TextView
                    android:id="@+id/tv_card_no"
                    style="@style/My_Item_Text_tip"
                    android:text=" " />

                <include layout="@layout/view_enter_arrow" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_underline" />

            <LinearLayout
                android:id="@+id/item_sex"
                style="@style/My_Item_container">

                <TextView
                    style="@style/My_Item_Text"
                    android:layout_weight="0"
                    android:text="@string/user_info_sex" />

                <TextView
                    android:id="@+id/tv_sex"
                    style="@style/My_Item_Text_tip"
                    android:text=" " />

                <include layout="@layout/view_enter_arrow" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_underline" />

            <LinearLayout
                android:id="@+id/item_birthday"
                style="@style/My_Item_container">

                <TextView
                    style="@style/My_Item_Text"
                    android:layout_weight="0"
                    android:text="@string/user_info_birthday" />

                <TextView
                    android:id="@+id/tv_birthday"
                    style="@style/My_Item_Text_tip"
                    android:text=" " />

                <include layout="@layout/view_enter_arrow" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_underline" />

            <LinearLayout 
                android:id="@+id/item_figure"
                style="@style/My_Item_container">

                <TextView
                    style="@style/My_Item_Text"
                    android:layout_weight="0"
                    android:text="@string/user_info_figure" />

                <TextView
                    style="@style/My_Item_Text_tip"
                    android:text=" " />

                <include layout="@layout/view_enter_arrow" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_underline" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>