<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/login_logo_text"
        android:layout_centerHorizontal="true"
        android:id="@+id/image_logo"
        android:layout_marginTop="60dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_logo"
        android:layout_marginTop="80dp"
        android:id="@+id/ll_text"
        android:orientation="vertical">
        <LinearLayout
            android:paddingStart="50dp"
            android:paddingEnd="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <android.support.design.widget.TextInputLayout
                android:textColorHint="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:textSize="13sp"
                    android:hint="用户名"
                    android:drawableLeft="@mipmap/login_user_icon"
                    android:drawablePadding="5dp"
                    android:textColor="#ffffff"
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/selector_bg_edit"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:paddingBottom="2dp"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:paddingStart="50dp"
            android:paddingEnd="30dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <android.support.design.widget.TextInputLayout
                android:textColorHint="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:textSize="13sp"
                    android:hint="密码"
                    android:drawableLeft="@mipmap/login_pas_icon"
                    android:drawablePadding="5dp"
                    android:textColor="#ffffff"
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:inputType="textPassword"
                    android:background="@drawable/selector_bg_edit"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:paddingBottom="2dp"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@mipmap/login_btn"
        android:layout_below="@+id/ll_text"
        android:layout_margin="60dp"
        android:textColor="#e97220"
        style="@style/ShowTv2"
        android:id="@+id/btn_login"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@+id/btn_login">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            style="@style/ShowTv4"
            android:id="@+id/tv_register"
            android:layout_marginLeft="10dp"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            android:id="@+id/tv_forget"
            style="@style/ShowTv4" />
    </LinearLayout>
</RelativeLayout>
